--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
+<div class="jumbotron center">
+	<div class="container">
 <h1>About Us</h1>
 <p>"A Picture Is Worth A Thousand Words" Approach to learning SAT Vocabulary</p>
+</div>
+</div>
