--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,7 +3,7 @@
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
-      <p><%= pin.description %></p>
+      <h1><%= pin.description %></h1>
       <%= link_to image_tag(pin.image.url(:medium)), pin %>
       <div class="panel-body">
         <p><strong><%= pin.user.name if pin.user %></strong></p>
