--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -4,10 +4,10 @@
 	<div class="col-md-offset-2 col-md-8">
 		<div class="panel panel-default">
 		<div class="panel-heading center">
+			<h1><%= @pin.description %></h1>
 			<%= image_tag @pin.image.url(:medium) %>
 		</div>
 		<div class="panel-body">
-		<p><%= @pin.description %></p>
 		<p><strong><%= @pin.user.name if @pin.user %></strong></p>
 
 		<% if @pin.user == current_user %>
