--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -4,12 +4,15 @@
   <% @pins.each do |pin| %>
     <div class="box panel panel-default">
       <div class="center">
-      <h1><%= pin.description %></h1>
+        <div class="panel-body">
+          <h1><%= pin.description %></h1>
+        </div>
       </div>
       <%= link_to image_tag(pin.image.url(:medium)), pin %>
       <div class="panel-body">
+        <div class="center">
         <p><strong><%= pin.user.name if pin.user %></strong></p>
-        
+        </div>
         <% if pin.user == current_user %>
           <div class="actions">
             <%= link_to edit_pin_path(pin) do %>
