--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron center">
 	<div class="container">
 <h1>About Us</h1>
-<p>"A Picture Is Worth A Thousand Words" Approach to Learning SAT Vocabulary</p>
+<p>The "A Picture Is Worth A Thousand Words" Approach To Learning SAT Vocabulary</p>
 </div>
 </div>
