--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,7 @@
 <div class="jumbotron center">
-	<div class="container">
+	<div class="center">
 <h1>About Us</h1>
 <p>The "A Picture Is Worth A Thousand Words" Approach To Learning SAT Vocabulary</p>
+<img src="app/assets/images/asdf.png" width="500" height="550">
 </div>
 </div>
