--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,9 @@
 <div class="jumbotron center">
 	<div class="center">
 <h1>About Us</h1>
-<p>The "A Picture Is Worth A Thousand Words" Approach To Learning SAT Vocabulary</p>
+<p>The "A Picture Is Worth A Thousand Words" Approach To Learning SAT Vocabulary.</p><br/>
+<p>Browse through our category of SAT Words and their picture-inspired definitions.</p><br/>
+<p>Or post a word you don't know so you can learn along the way.
 <img src="app/assets/images/asdf.png" width="500" height="550">
 </div>
 </div>
