--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron center">
 	<h1>Learn SAT Vocabulary</h1>
-	<p>Look Up A Word You Don't Know. Or Post One You Already Know.</p>
+	<p>Read Less. See More. Learn Better</p>
 	<p>
 		<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
 		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
