--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,7 @@
 <h1>About Us</h1>
 <p>The "A Picture Is Worth A Thousand Words" Approach To Learning SAT Vocabulary.</p>
 <p>Browse through our category of SAT Words and their picture-inspired definitions.</p>
-<p>Or post a word you don't know so you can learn along the way.
+<p>Or post a word you don't know so you can learn along the way.</p>
 <img src="http://i1374.photobucket.com/albums/ag408/jeongj2014/ScreenShot2014-01-02at80745PM_zps8f93db2f.png" width="500" height="550">
 </div>
 </div>
