--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,8 @@
 <div class="jumbotron center">
 	<div class="center">
-<h1>About Us</h1>
+<div class="page-header">
+  <h1>About Us</h1>
+</div>
 <p>The "A Picture Is Worth A Thousand Words" Approach To Learning SAT Vocabulary.</p>
 <p>Browse through our category of SAT Words and their picture-inspired definitions.</p>
 <p>Or post a word you don't know so you can learn along the way.</p><br/>
