--- a/search.html.erb
+++ b/search.html.erb
@@ -1,8 +1,6 @@
-	<form class="navbar-form navbar-left" role="search">
-	<%= form_tag pins_path, :method => :get do %>
-	<div class="form-group">
+<%= form_tag pins_path, :method => :get do %>
+	<p>
       <%= text_field_tag :search, params[:search] %>
-    </div>
-      <button type="submit" class="btn btn-default"><%= submit_tag "Search", :name => nil %></button>
+      <%= submit_tag "Search", :name => nil %>
+  	</p>
   <% end %>
-  </form>
