--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,3 +1,10 @@
+<%= form_tag articles_path, :method => :get do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
+
 <%= render 'pages/home' unless user_signed_in? %>
 
 <div id="pins" class="transitions-enabled">
