--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag articles_path, :method => :get do %>
+<%= form_tag pins_path, :method => :get do %>
   <p>
     <%= text_field_tag :search, params[:search] %>
     <%= submit_tag "Search", :name => nil %>
