--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,12 +14,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= form_tag pins_path, :method => :get do %>
-  <p>
+        <form class="navbar-form navbar-left" role="search"><%= form_tag pins_path, :method => :get do %>
+          <div class="form-group">
     <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :name => nil %>
-  </p>
-<% end %></li>
+  </div>
+    <button type="submit" class="btn btn-default"><%= submit_tag "Search", :name => nil %></button>
+<% end %>
+</form>
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li>
         <% if user_signed_in? %>
