--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
           <div class="form-group">
     <%= text_field_tag :search, params[:search] %>
   </div>
-    <button type="submit" class="btn btn-default"><%= submit_tag "Search", :name => nil %></button>
+<%= submit_tag "Search", :name => nil %>
 <% end %>
 </form>
         <li><%= link_to "Home", root_path %></li>
