--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
           <div class="form-group">
     <%= text_field_tag :search, params[:search] %>
   </div>
-<%= submit_tag "Search", :name => nil %>
+    <%= submit_tag "Search", :name => nil, class :btn btn-default %></button>
 <% end %>
 </form>
         <li><%= link_to "Home", root_path %></li>
