--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
         <form class="navbar-form navbar-left" role="search">
           <%= form_tag pins_path, :method => :get do %>
           <div class="form-group">
-    <%= text_field_tag :search, params[:search] %>
+    <%= text_field_tag :search, params[:search], :class => "form-control" %>
   </div>
     <%= submit_tag "Search", :name => nil, :class => "btn btn-primary" %>
 <% end %>
