--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron center">
-	<h1>Learn SAT Vocabulary</h1>
+	<h1>Learn SAT Vocabulary<sup>BETA</sup></h1>
 	<!-- <p>Read Less. See More. Learn Better</p> -->
 	<p>A Better Way To Learn SAT Vocabulary</p>
 	<p>
