--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
 </head>
 <body>
 	
+	 <!-- Begin BidVertiser code -->
+<SCRIPT LANGUAGE="JavaScript1.1" SRC="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=570309&bid=1450301" type="text/javascript"></SCRIPT>
+<noscript><a href="http://www.bidvertiser.com">pay per click</a></noscript>
+<!-- End BidVertiser code --> 
+
 	<%= render 'layouts/header' %>
 	<div class="container">
 		<% flash.each do |name, msg| %>
