--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -6,4 +6,8 @@
 		<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
 		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 	</p>
+	   <!-- Begin BidVertiser code -->
+<SCRIPT LANGUAGE="JavaScript1.1" SRC="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=570309&bid=1450301" type="text/javascript"></SCRIPT>
+<noscript><a href="http://www.bidvertiser.com">pay per click</a></noscript>
+<!-- End BidVertiser code --> 
 </div>
