--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,8 @@
 <nav class="navbar navbar-static-top navbar-default" role="navigation">
+   <!-- Begin BidVertiser code -->
+<SCRIPT LANGUAGE="JavaScript1.1" SRC="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=570309&bid=1450301" type="text/javascript"></SCRIPT>
+<noscript><a href="http://www.bidvertiser.com">pay per click</a></noscript>
+<!-- End BidVertiser code --> 
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
