--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,10 +1,10 @@
 <div class="jumbotron center">
 	<h1>Learn SAT Vocabulary<sup>BETA</sup></h1>
 	<!-- <p>Read Less. See More. Learn Better</p> -->
-	<p>A Better Way To Learn SAT Vocabulary</p>
+	<p>Read Less. See More. Learn Better</p>
 	<p>
 		<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
-		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+		<%= link_to "Sign up To Post A Word", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 	</p>
 	  
 </div>
