--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -7691,6 +7691,6 @@ td.visible-print {
   text-align: center;
 }
 
-.navbar-height{
-  75px;
-}               
+.navbar-inner {
+  height: 75px;  
+}             
