--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-static-top navbar-default" role="navigation">
    <div class="center">
-    <!-- Begin BidVertiser code
+    <!-- Begin BidVertiser code -->
 <SCRIPT LANGUAGE="JavaScript1.1" SRC="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=570309&bid=1450313" type="text/javascript"></SCRIPT>
 <noscript><a href="http://www.bidvertiser.com">pay per click</a></noscript>
 <!-- End BidVertiser code --> 
